# archestra

./: .gitignore  EXTERNAL_CONTRIBUTORS.md  README.md
.github/: values-ci.yaml  values-staging.yaml
.github/release-please/: .release-please-manifest.json
.github/workflows/: on-pull-requests.yml  platform-e2e-tests.yml
docs/pages/: mcp-authentication.md  platform-access-control.md  platform-agent-skills-sharing.md  platform-agent-triggers-email.md  platform-agents.md  platform-api-reference.md  platform-archestra-mcp-server.md  platform-chat.md  platform-costs-and-limits.md  platform-deployment.md  platform-knowledge-bases.md  platform-knowledge-connectors.md  platform-mcp-gateway.md  platform-ms-teams.md  platform-private-registry.md  platform-slack.md  platform-supported-llm-providers.md
migration-kit/: SKILL.md
migration-kit/references/: entity-mapping.md
migration-kit/scripts/: apply.py  contracts.py  discover.py
migration-kit/tests/: test_apply_build.py  test_local_toolset.py
platform/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
platform/backend/: architecture.md  knip.config.ts  package.json
platform/dev/: Tiltfile.coderuntime  Tiltfile.dev
platform/e2e-tests/: playwright.config.ts  tsconfig.json
platform/shared/: agents.ts  (+14 more)
skills-eval/: README.md  benchmark_mcp.py  eval_client.py  lifecycle.py  pyproject.toml  results.py  run.py  seeding.py  task_configs.py  tasks.py  verify.py
skills-eval/tasks/bike-rebalance/: NOTICE
skills-eval/tasks/list-stats/upstream/environment/: data.json
skills-eval/tasks/list-stats/upstream/tests/: test_outputs.py
skills-eval/tasks/multistage-demo/upstream/environment/: data.json
skills-eval/tasks/multistage-demo/upstream/tests/: test_outputs.py
skills-eval/tests/: conftest.py  test_benchmark_mcp.py  test_eval_client.py  test_lifecycle.py  test_results.py  test_run.py  test_seeding.py  test_tasks.py  test_verify.py
(+595 files in other folders)
