# Contributor-only dev tooling for the skills-eval benchmark.
#
# the harness drives a live archestra over HTTP and runs vendored verifiers in ephemeral uv
# environments; it reuses the migration-kit zero-dependency client by importing it on sys.path
# (see tests/conftest.py). this file configures the *development* loop only (tests, types, lint).

[project]
name = "skills-eval"
version = "0.0.0"
description = "SkillsBench skill/sandbox smoke-eval for Archestra (not published)."
requires-python = ">=3.10"
dependencies = [
    "coloredlogs==15.0.1",
    "fire==0.7.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ty==0.0.44",
    "ruff==0.15.16",
]

[tool.pytest.ini_options]
# only our suite; the vendored tasks/<id>/upstream/tests are third-party and need pyscipopt.
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.10"
# the migration-kit zero-dependency client is imported on sys.path at runtime (see conftest);
# point ty at it so its imports resolve without vendoring.
extra-paths = ["../migration-kit/scripts"]

[tool.ty.src]
# type-check only our modules; skip tests and the verbatim vendored task assets.
include = ["eval_client.py", "tasks.py", "task_configs.py", "results.py", "verify.py", "run.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
# tasks/<id>/upstream is vendored verbatim from SkillsBench -- not ours to lint.
extend-exclude = ["tasks"]

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.ruff.lint.per-file-ignores]
# run.py inserts migration-kit/scripts on sys.path before importing the client (E402 by design).
"run.py" = ["E402"]

[tool.ruff.lint.isort]
# imported by filename off sys.path -- treat as first-party so import ordering is stable.
known-first-party = ["archestra_client", "contracts", "eval_client", "tasks", "results", "verify"]
